# chat-with-wiki-exercise

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
frontend/: .dockerignore  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.css
frontend/src/components/: ChatInterface.css  ChatInterface.js  MessageRenderer.css  MessageRenderer.js
tests/: test_main.py
